--- a/app/view/user-edit.html
+++ b/app/view/user-edit.html
@@ -1,60 +1,66 @@
 {% extends "common/layout-main.html" %} {% block content %}
 
-<div class="tpl-content-wrapper">
-    <div class="tpl-portlet-components">
-        <div class="tpl-block">
-            <div class="am-g">
-                <div class="tpl-form-body tpl-form-line">
-                    <form action="/user/userUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
-                     <div class="am-form-group">
-                            <label for="user-weibo" class="am-u-sm-3 am-form-label">Avatar</label>
-                            <div class="am-u-sm-9">
-                                <div class="am-form-group am-form-file">
-                                    <div class="tpl-form-file-img">
-                                        <img id="img-preview" src="{{user.avatar}}" alt="">
-                                    </div>
-                                    <button type="button" class="am-btn am-btn-danger am-btn-sm">
-                                            <i class="am-icon-cloud-upload"></i> Change Avatar</button>
-                                    <input id="img-file" name="img-file" type="file"  onchange="fileChanged(this)" multiple>
+<div class="col-xs-12">
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">User Edit</h3>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+            <form action="/user/userUpdate" method="post" enctype="multipart/form-data" class="form-horizontal">
+                <div class="form-group">
+                    <label for="image-avatar" class="col-xs-2 control-label">Avatar</label>
+                    <div class="col-xs-10">
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-4 col-md-3">
+                                <div class="thumbnail">
+                                    <img id="img-preview" src="{{user.avatar}}" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="am-form-group">
-                            <label for="user-name" class="am-u-sm-3 am-form-label">User Name</label>
-                            <div class="am-u-sm-9">
-                                <input type="text" id="user-name" name="user-name" class="tpl-form-input" placeholder="please input the user name"
-                                value="{{user.name}}"
-                                />
-                            </div>
+                        <div>
+                            <a class="btn btn-danger" onclick="{$('#img-file').click();}">
+                             <i class="glyphicon glyphicon-cloud-upload"></i>Change Avatar
+                            </a>
+                            <input id="img-file" style="display:none;" name="img-file" type="file" onchange="fileChanged(this)"/>
                         </div>
-                        <input type="text" name="user_id" value="{{user.id}}" style="display:none"/>
-                         <div class="am-form-group">
-                            <div class="am-u-sm-9 am-u-sm-push-3">
-                                <input type="submit" class="am-btn am-btn-primary tpl-btn-bg-color-success"></input>
-                            </div>
-                        </div>
-                    </form>
 
+                    </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <label for="user-name" class="col-xs-2 control-label">User Name</label>
+                    <div class="col-xs-10">
+                        <input type="text" class="form-control" id="user-name" name="user-name" placeholder="please input the user name" value="{{user.name}}">
+                    </div>
+                </div>
+
+                <input type="text" name="user_id" value="{{user.id}}" style="display:none" />
+                <div class="form-group">
+                    <div class="col-xs-10">
+                        <input type="submit" class="btn btn-primary"></input>
+                    </div>
+                </div>
+            </form>
+
         </div>
 
     </div>
 </div>
 
 <script type="text/javascript">
-     function fileChanged(target) {
+    function fileChanged(target) {
 
-       var file=target.files[0];
-       var data=new Date(file.lastModifiedDate);
-       var lastModifiedDate=data.toLocaleDateString();
-       var name=file.name;
-       var size=file.size;
-       var type=file.type;
-       var url =  window.URL.createObjectURL(file);
+        var file = target.files[0];
+        var data = new Date(file.lastModifiedDate);
+        var lastModifiedDate = data.toLocaleDateString();
+        var name = file.name;
+        var size = file.size;
+        var type = file.type;
+        var url = window.URL.createObjectURL(file);
 
-       document.getElementById('img-preview').src=url;
-     }
+        document.getElementById('img-preview').src = url;
+    }
+
 </script>
 
 {% endblock %}
