add and edit image

--- a/app/view/index-add-edit.html
+++ b/app/view/index-add-edit.html
@@ -62,10 +62,13 @@
  
    (function () {
         if (location.pathname.indexOf('edit') > 0) {
-
+            //Edit mode
+            $('box-title').val('Edit Image');
             document.getElementById('img-preview').setAttribute('src', '/index/getImageUrlById?id={{image.id}}');
             document.getElementById('img-description').value = '{{image.name}}';
             document.getElementById('img-time').value = '{{image.name}}';
+
+        }else{
 
         }
         document.getElementById('album_id').value = urlUtil.getQueryValue('album_id');
